[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/stash.png" type="Texture" id=1]
[ext_resource path="res://assets/UbuntuTitleFont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://prefabs/Stash.gd" type="Script" id=3]
[ext_resource path="res://assets/money_m.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=2]
size = 24
outline_color = Color( 0.231373, 0.196078, 0.196078, 1 )
font_data = ExtResource( 2 )

[node name="Stash" type="Button"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -109.0
margin_top = -106.0
margin_right = -24.0
margin_bottom = -44.0
focus_mode = 0
flat = true
script = ExtResource( 3 )

[node name="BorderColor" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0
color = Color( 0.164706, 0.196078, 0.27451, 1 )

[node name="StashIco" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 15, 15 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="EmptyLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 6.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0.745098, 0.745098, 0.745098, 1 )
custom_fonts/font = SubResource( 2 )
text = "empty"
align = 1
valign = 1

[node name="GoldLabel" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 37.0
margin_top = 8.0
margin_right = -5.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0.945098, 0.945098, 0.945098, 1 )
custom_fonts/font = SubResource( 2 )
text = "x2"
align = 1
valign = 1

[node name="GoldIco" type="TextureRect" parent="GoldLabel"]
margin_left = -31.0
margin_top = -4.0
margin_right = -1.0
margin_bottom = 26.0
rect_min_size = Vector2( 15, 15 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
